[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Eric Butler <ericbutler000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "day-1"
path = "src/day-1.rs"


[[bin]]
name = "day-2"
path = "src/day-2.rs"
