[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Eric Butler <ericbutler000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "day-01"
path = "src/day-01.rs"


[[bin]]
name = "day-02"
path = "src/day-02.rs"

[[bin]]
name = "day-03"
path = "src/day-03.rs"

[[bin]]
name = "day-04"
path = "src/day-04.rs"